welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: not found: value die
	return die+die2
               ^