welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if ((die1==die2) && (noDoubles)) {
		var die=(die1+1)%6
	} else {
		var die = die1
	}
	return die+die2
}
